--- a/Develop/style.css
+++ b/Develop/style.css
@@ -17,6 +17,10 @@ body {
   background-color: #f9fbfd;
 }
 
+.hide {
+  display: none;
+}
+
 .wrapper {
   padding-top: 30px;
   padding-left: 20px;
